# GDCA_gpu

./: CMakeLists.txt  README.md
source/: .main.cu.swp  a.out  main.cu  test.cu
